feat: support Spring 7

--- a/docs/changelog/2.0.0.md
+++ b/docs/changelog/2.0.0.md
@@ -3,3 +3,9 @@
 _Not Released Yet_
 
 #### Overview
+
+This release requires Spring Framework 7.
+
+#### Breaking Changes
+
+This release requires Spring Framework 7.
